Fix overflow issue in Recent Activity page
- Fix student list overflow issue in Recent Activity page

--- a/public/stylesheets/scss/instructional_materials.scss
+++ b/public/stylesheets/scss/instructional_materials.scss
@@ -270,7 +270,7 @@
 #recent_activity_inprogress td.student_name div.progressbar_container {height:20px;padding-top:0px;width:100px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
 #recent_activity_inprogress td.last_update_date div.progressbar_container {height:20px;padding-top:0px;}
 #recent_activity_inprogress th.activity.expand_collapse_text div.progressbar_container {height:20px;padding-top:0px;}
-#recent_activity_inprogress div.progressbar_container {height:15px;padding-top:3px;}
+
 
 .messagetable{width:100%}
 .messagetable td{font-style:italic;text-align:left}
